--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "php-mime-mail-parser/php-mime-mail-parser": "dev-master",
-        "maknz/slack": "dev-master"
+        "maknz/slack": "dev-master",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
