--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "maknz/slack": "dev-master",
+        "maknz/slack": "1.7.0",
         "predis/predis": "~1.0"
     },
     "require-dev": {
