--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "maknz/slack": "1.7.0",
-        "predis/predis": "~1.0",
-        "pingpong/admin": "dev-master"
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
